--- a/mainapp/static/mainapp/sedona/css/style.css
+++ b/mainapp/static/mainapp/sedona/css/style.css
@@ -119,7 +119,7 @@ font-size: 21px;
 
                               /* hero */
 .hero{
-background: url(../img/background\ photo.jpg);
+background: url(../img/background-photo.jpg);
 max-width: 1200px;
 height: 509px;
 transform: translate(0, -15px);
